[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
speedy = { path = "../lib/speedy" }
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
tungstenite = "0.17.2"
async-std = { version = "1.12.0", features = ["unstable"] }
anyhow = "1.0.58"
