[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rkv = { path = "../lib/rkv" }
err = { path = "../err" }
util = { path = "../lib/util" }
rocksdb = { path = "../lib/rust-rocksdb", features = [
  "zstd",
  "lz4"
], default-features = false }
log = "0.4.17"
