[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rkv = { path = "../lib/rkv" }
err = { version = "0.0.5", package = "rmw_err" }
util = { path = "../lib/util" }
rocksdb = { path = "../lib/rocksdb", features = [
  "zstd",
  "lz4"
], default-features = false }
log = "0.4.17"
paste = "1.0.7"
anyhow = "1.0.58"
