[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rkv = { path = "../lib/rkv" }
rocksdb = { path = "../lib/rust-rocksdb", features = [
  "zstd",
  "lz4"
], default-features = false }
