[package]
name = "net"
version = "0.1.0"
edition = "2021"

[features]
default = ["upnp", "log"]
upnp = ["dep:upnp"]
log = ["dep:logger", "dep:log"]

[dependencies]
config = { path = "../config" }
run = { path = "../run" }
dir = { path = "../dir" }
err = { path = "../err" }
api = { path = "../api" }
util = { path = "../lib/util" }
db = { path = "../db" }
upnp = { path = "../upnp", optional = true }
speedy = { path = "../lib/speedy", features = ["box"] }
b80 = { path = "../lib/b80" }
logger = { path = "../logger", optional = true }
async-std = { version = "1.12.0", features = ["unstable"] }
const-str = "0.4.1"
anyhow = "1.0.58"
log = { version = "0.4.17", optional = true }
futures = "0.3.21"
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
parking_lot = "0.12.1"
tungstenite = "0.17.2"
paste = "1.0.7"
smallvec = "1.8.1"
rand = "0.8.5"
