[package]
name = "net"
version = "0.1.0"
edition = "2021"

[features]
default = ["upnp"]
upnp = ["dep:upnp"]

[dependencies]
config = { path = "../config" }
run = { path = "../run" }
dir = { path = "../dir" }
err = { path = "../err" }
util = { path = "../lib/util" }
db = { path = "../db" }
upnp = { path = "../upnp", optional = true }
speedy = { path = "../lib/speedy", features = ["box"] }
b80 = { path = "../lib/b80" }
async-std = { version = "1.12.0", features = ["unstable"] }
anyhow = "1.0.58"
log = { version = "0.4.17" }
futures = "0.3.21"
paste = "1.0.7"
smallvec = "1.9.0"
rand = "0.8.5"
