[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
async-std = { version = "1.12.0", features = ["unstable"] }
