[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
tungstenite = "0.17.2"
async-std = { version = "1.12.0", features = ["unstable"] }
log = "0.4.17"
err = { path = "../err" }
net = { path = "../net" }
api = { path = "../api" }
config = { path = "../config" }
anyhow = "1.0.58"
speedy = { path = "../lib/speedy", features = ["box"] }
