[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
tungstenite = "0.17.2"
async-std = { version = "1.12.0", features = ["unstable"] }
log = "0.4.17"
err = { version = "0.0.5", package = "rmw_err" }
net = { path = "../net" }
api = { path = "../api" }
run = { path = "../run" }
config = { path = "../config" }
anyhow = "1.0.58"
speedy = { path = "../lib/speedy", features = ["box"] }
futures = "0.3.21"
