[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
librocksdb-sys = { path = "../rust-rocksdb/librocksdb-sys" }
rocksdb = { path = "../rust-rocksdb", features = [
  "zstd",
  "lz4"
], default-features = false }
anyhow = "1.0.57"
err = { path = "../../err" }
num_cpus = "1.13.1"
paste = "1.0.7"
ordered-varint = "1.0.1"
parking_lot = "0.12.1"
smallvec = "1.8.0"
once_cell = "1.12.0"
