[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
librocksdb-sys = { path = "../rocksdb/librocksdb-sys" }
rocksdb = { path = "../rocksdb", features = [
  "zstd",
  "lz4"
], default-features = false }
anyhow = "1.0.58"
err = { version = "0.0.5", package = "rmw_err" }
util = { path = "../util" }
num_cpus = "1.13.1"
log = "0.4.17"
